2007-03-05 Guillaume Rousse <guillomovitch@zarb.org> 0.1.0
	* initial release