@@ -1,13 +1,15 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Youri-Media
-version:      v0.1.0
+version:      v0.2.0
 version_from: lib/Youri/Media.pm
 installdirs:  site
 requires:
     LWP::Simple:                   0
     URPM:                          0
+    version:                       0
     Youri::Package:                0
+    Youri::Package::RPM::URPM:     0
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.30_01
