@@ -1,14 +1,13 @@
 #!/usr/bin/perl
-# $Id$
+# $Id: /mirror/youri/soft/Media/trunk/t/pod-coverage.t 2315 2007-03-22T13:45:11.684364Z guillomovitch  $
 
+use strict;
+use warnings;
 use Test::More;
-eval {
-    require Test::Pod::Coverage;
-    import Test::Pod::Coverage;
-};
-plan(skip_all => 'Test::Pod::Coverage not installed; skipping') if $@;
-plan(skip_all => 'Minimal Test::Pod::Coverage version 1.04 required; skipping')
-    unless $Test::Pod::Coverage::VERSION >= 1.04;
+
+eval "use Test::Pod::Coverage 1.04";
+plan(skip_all => 'Test::Pod::Coverage >= 1.04 required, skipping') if $@;
+
 all_pod_coverage_ok(
     { coverage_class => 'Pod::Coverage::CountParents' }
 );
